--- a/naam.html
+++ b/naam.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Detail</title>
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="css/reset.css" />
@@ -27,7 +27,7 @@
     ></script>
 
     <!-- Eigen CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -68,72 +68,40 @@
         </div>
       </nav>
     </header>
-
+    
     <!-- Main -->
     <main class="container my-5">
-      
-      <!-- Contacteer ons -->
-      <section class="text-center mb-5">
-        <h2 class="mb-4">Contacteer ons</h2>
-        <div class="row">
-          <div class="col-md-6 text-md-start text-center mb-4 mb-md-0">
-            <p><strong>Telefoonnummer:</strong><br />+32 3 220 33 00</p>
-            <p><strong>Email:</strong><br />onthaal.ell@ap.be</p>
-            <p>
-              <strong>Adres:</strong><br />Ellermanstraat 33<br />2060 Antwerpen
-            </p>
-          </div>
-          <div class="col-md-6">
-            <div class="ratio ratio-4x3">
-              <iframe
-                src="https://www.google.com/maps?q=Ellermanstraat+33,+2060+Antwerpen,+België&output=embed"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-              ></iframe>
-            </div>
-          </div>
+      <div class="row justify-content-center text-center mb-4">
+        <div class="col-12">
+          <h2>Detail</h2>
         </div>
-      </section>
+      </div>
 
-      <!-- Contactformulier -->
-      <section class="mb-5">
-        <h2 class="text-center mb-4">Contactformulier</h2>
-        <form class="mx-auto" style="max-width: 800px">
-          <div class="row">
-            <div class="col-md-6 mb-3">
-              <label for="naam" class="form-label">Naam</label>
-              <input type="text" id="naam" class="form-control" required />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="telefoon" class="form-label">Telefoonnummer</label>
-              <input type="tel" id="telefoon" class="form-control" required />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="voornaam" class="form-label">Voornaam</label>
-              <input type="text" id="voornaam" class="form-control" required />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" id="email" class="form-control" required />
-            </div>
-            <div class="col-12 mb-3">
-              <label for="opmerking" class="form-label">Opmerking</label>
-              <textarea
-                id="opmerking"
-                class="form-control"
-                rows="5"
-                required
-              ></textarea>
-            </div>
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary px-4">
-                Verzenden
-              </button>
-            </div>
-          </div>
-        </form>
-      </section>
+      <div class="row align-items-center justify-content-center">
+
+        <div class="col-md-4 order-md-2 text-center mb-4 mb-md-0">
+          <img
+            src="/images/Profiel foto.jpg"
+            alt="Profiel van Yamani El Soudani"
+            class="img-fluid rounded shadow"
+            width="250"
+          />
+        </div>
+
+        <div class="col-md-8 order-md-1">
+          <strong class="d-block mb-2">Hallo, ik ben Yamani El Soudani.</strong>
+          <p class="text-start">
+            Ik werk graag zelfstandig en ben altijd gemotiveerd om bij te leren
+            over onderwerpen zoals elektronica, elektriciteitsnetwerken, HTML en
+            meer. Ik neem mijn verantwoordelijkheid en toon initiatief in mijn
+            werk. Daarnaast werk ik graag hands-on en steek ik de handen uit de
+            mouwen. In mijn vrije tijd lees ik graag stripboeken, fantasyboeken
+            en verdiep ik me in Warhammer 40K. Ik kijk ernaar uit om kennis te
+            maken met klanten en kan niet wachten om te laten zien wat ik
+            allemaal kan!
+          </p>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
@@ -186,6 +154,7 @@
             <div>X</div>
           </div>
         </div>
+
         <div class="text-center">
           <small>&copy; websitenaam 2025</small>
         </div>
