--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <!-- Copyright -->
         <div class="text-center">
-          <small>&copy; websitenaam 2025</small>
+          <small>&copy; yamani-elsoudani 2025</small>
         </div>
       </div>
     </footer>
