--- a/portfolio.html
+++ b/portfolio.html
@@ -288,7 +288,7 @@
         </div>
       </div>
       <div class="mt-4">
-        <small>&copy; websitenaam 2025</small>
+        <small>&copy; yamani-elsoudani 2025</small>
       </div>
     </footer>
   </body>
