--- a/naam.html
+++ b/naam.html
@@ -156,7 +156,7 @@
         </div>
 
         <div class="text-center">
-          <small>&copy; websitenaam 2025</small>
+          <small>&copy; yamani-elsoudani 2025</small>
         </div>
       </div>
     </footer>
