--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,14 @@
       <!-- Contactformulier -->
       <section class="mb-5">
         <h2 class="text-center mb-4">Contactformulier</h2>
-        <form class="mx-auto" style="max-width: 800px">
+        <form
+          name="contact"
+          method="POST"
+          data-netlify="true"
+          action="/thank-you.html"
+          class="mx-auto"
+          style="max-width: 800px"
+        >
           <div class="row">
             <div class="col-md-6 mb-3">
               <label for="naam" class="form-label">Naam</label>
