--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
 
     <!-- Bootstrap JS -->
@@ -26,7 +26,7 @@
       defer
     ></script>
 
-    <!-- Eigen CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="/naam.html">Detail</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link active" href="/contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -69,9 +69,9 @@
       </nav>
     </header>
 
-    <!-- Main -->
+    <!-- Main Content -->
     <main class="container my-5">
-      <!-- Contacteer ons -->
+      <!-- Contact Section -->
       <section class="text-center mb-5">
         <h2 class="mb-4">Contacteer ons</h2>
         <div class="row">
@@ -79,23 +79,16 @@
             <p><strong>Telefoonnummer:</strong><br />+32 3 220 33 00</p>
             <p><strong>Email:</strong><br />onthaal.ell@ap.be</p>
             <p>
-              <strong>Adres:</strong><br />Ellermanstraat 33<br />2060 Antwerpen
+              <strong>Adres:</strong><br />Ellermanstraat 33, 2060 Antwerpen
             </p>
           </div>
           <div class="col-md-6">
-            <div class="ratio ratio-4x3">
-              <iframe
-                src="https://www.google.com/maps?q=Ellermanstraat+33,+2060+Antwerpen,+België&output=embed"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-              ></iframe>
-            </div>
+            <div id="map" style="height: 300px; width: 100%"></div>
           </div>
         </div>
       </section>
 
-      <!-- Contactformulier -->
+      <!-- Contact Form with Netlify -->
       <section class="mb-5">
         <h2 class="text-center mb-4">Contactformulier</h2>
         <form
@@ -106,27 +99,53 @@
           class="mx-auto"
           style="max-width: 800px"
         >
+          <input type="hidden" name="form-name" value="contact" />
           <div class="row">
             <div class="col-md-6 mb-3">
               <label for="naam" class="form-label">Naam</label>
-              <input type="text" id="naam" class="form-control" required />
+              <input
+                type="text"
+                id="naam"
+                name="naam"
+                class="form-control"
+                required
+              />
             </div>
             <div class="col-md-6 mb-3">
               <label for="telefoon" class="form-label">Telefoonnummer</label>
-              <input type="tel" id="telefoon" class="form-control" required />
+              <input
+                type="tel"
+                id="telefoon"
+                name="telefoon"
+                class="form-control"
+                required
+              />
             </div>
             <div class="col-md-6 mb-3">
               <label for="voornaam" class="form-label">Voornaam</label>
-              <input type="text" id="voornaam" class="form-control" required />
+              <input
+                type="text"
+                id="voornaam"
+                name="voornaam"
+                class="form-control"
+                required
+              />
             </div>
             <div class="col-md-6 mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" id="email" class="form-control" required />
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="form-control"
+                required
+              />
             </div>
             <div class="col-12 mb-3">
               <label for="opmerking" class="form-label">Opmerking</label>
               <textarea
                 id="opmerking"
+                name="opmerking"
                 class="form-control"
                 rows="5"
                 required
@@ -145,53 +164,6 @@
     <!-- Footer -->
     <footer class="border-top py-5">
       <div class="container">
-        <div
-          class="row row-cols-2 row-cols-md-4 g-4 justify-content-center text-center mb-4"
-        >
-          <div class="col">
-            <img
-              src="/images/Social/snapchat.png"
-              alt="Snapchat"
-              class="border rounded-0 mb-2"
-              width="50"
-              height="50"
-            />
-            <div>Snapchat</div>
-          </div>
-
-          <div class="col">
-            <img
-              src="/images/Social/instagram.png"
-              alt="Instagram"
-              class="border rounded-0 mb-2"
-              width="50"
-              height="50"
-            />
-            <div>Instagram</div>
-          </div>
-
-          <div class="col">
-            <img
-              src="/images/Social/facebook.png"
-              alt="Facebook"
-              class="border rounded-0 mb-2"
-              width="50"
-              height="50"
-            />
-            <div>Facebook</div>
-          </div>
-
-          <div class="col">
-            <img
-              src="/images/Social/x.png"
-              alt="X"
-              class="border rounded-0 mb-2"
-              width="50"
-              height="50"
-            />
-            <div>X</div>
-          </div>
-        </div>
         <div class="text-center">
           <small>&copy; yamani-elsoudani 2025</small>
         </div>
