--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,20 @@
       defer
     ></script>
 
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Leaflet CSS -->
+    <link
+      href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      rel="stylesheet"
+    />
+
+    <!--map css-->
+    <link rel="stylesheet" href="/css/map.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -83,7 +97,7 @@
             </p>
           </div>
           <div class="col-md-6">
-            <div id="map" style="height: 300px; width: 100%"></div>
+            <div id="map"></div>
           </div>
         </div>
       </section>
@@ -170,21 +184,38 @@
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+
     <script>
+      // Ensure the map container has a defined height
+      document.getElementById("map").style.height = "400px";
+
+      // Location Coordinates for Antwerpen
       const locationCoordinates = [51.2194, 4.4025];
+
+      // Initialize the Map
       const map = L.map("map").setView(locationCoordinates, 13);
 
+      // Add OpenStreetMap tiles
       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
         maxZoom: 19,
         attribution:
           '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
       }).addTo(map);
 
+      // Add Marker
       L.marker(locationCoordinates)
         .addTo(map)
-        .bindPopup("Ellermanstraat 33, 2060 Antwerpen")
+        .bindPopup("<b>Ellermanstraat 33</b><br>2060 Antwerpen")
         .openPopup();
+
+      // Ensure map is correctly displayed after rendering
+      setTimeout(() => {
+        map.invalidateSize();
+      }, 100);
     </script>
   </body>
 </html>
